--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "nodemon": "^1.19.0"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "express": "^4.17.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.10"
   }
 }
