--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "cors": "^2.8.5",
     "express": "^4.17.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.5.10"
+    "mongoose": "^5.5.10",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0"
   }
 }
